# super-drf

./: .dockerignore  Dockerfile  Dockerfile.heroku  Dockerfile.with-compose.prod  entrypoint.prod.sh  fly.toml  heroku.history  manage.py  pyproject.toml  requirements.txt
.github/workflows/: fly-action.yml
api/: models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_todotask_state.py  0003_alter_todotask_state.py
logs/: heroku.history
superauth/: apps.py  models.py  serializers.py  views.py
superauth/migrations/: 0001_initial.py  0002_alter_customusermodel_user_id.py  0003_alter_customusermodel_user_id.py  0004_alter_customusermodel_user_id.py  0005_alter_customusermodel_user_id.py  0006_alter_customusermodel_user_id.py
superduperdrf/: asgi.py  middlewares.py  prometheus.yml  routing.py  settings.py  urls.py  views.py  wsgi.py
supervalve/: apps.py  comsumers.py
upload/templates/: upload.html
