[tool.poetry]
name = "super-drf"
version = "0.1.0"
description = "My super duper django rest backend for myself :>"
authors = ["minlaxz <minminlaxz@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.13.1"
Django = "^4.0.4"
django-fsm = "^2.8.0"
graphviz = "^0.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
