[tool.poetry]
name = "super-drf"
version = "0.1.0"
description = "My super duper django rest backend for myself :>"
authors = ["minlaxz <minminlaxz@gmail.com>"]
license = "UNLICENSE"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "^3.13.1"
Django = "^4.0.4"
django-fsm = "^2.8.0"
graphviz = "^0.20"
django-cors-headers = "^3.11.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
whitenoise = "^6.2.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
